fixed type contrast on op50

--- a/_resources/_styles/utils.styl
+++ b/_resources/_styles/utils.styl
@@ -57,17 +57,11 @@
 
 // OPACITY
 
-.op20 {
+.op20, .op30 {
 	opacity: .2;
 }
-.op30 {
-	opacity: .3;
-}
 .op50 {
-	opacity: .5;
-}
-.op60 {
-	opacity: .6;
+	color: #525252;
 }
 
 .rounded10 {
